Initial add date plugin

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,9 @@
     <!-- Include simplecolorpicer-->
     <script src="jquery.simplecolorpicker.js"></script>
     <link rel="stylesheet" href="jquery.simplecolorpicker.css"/>
-	
+    <!-- Include datetimepicer-->
+    <script src="jquery.datetimepicker.full.min.js"></script>
+    <link rel="stylesheet" href="jquery.datetimepicker.min.css"/>
   </head>
 	<body>
 		<div class="container">
