--- a/views/message.erb
+++ b/views/message.erb
@@ -1,7 +1,34 @@
 <h2> <%= @title %></h2>
 
+ <!-- Table -->
+  <table class="table" border = '1px'>
+  <thead>
+  <tr>
+   <td>ID:</td>
+   <td>User Name:</td>
+   <td>Phone Number:</td>
+   <td>Date Time:</td>
+   <td>Barber:</td>
+   <td>Color:</td>
+  </tr>
+ </thead>
+  <% @message.each do |line| %>
+     <tr>
+          <td><%= "#{line[0]}" %></td>
+          <td><%= "#{line[1]}" %></td>
+          <td><%= "#{line[2]}" %></td>
+          <td><%= "#{line[3]}" %></td>
+          <td><%= "#{line[4]}" %></td>
+          <td><%= "#{line[5]}" %></td>
+     </tr>
+  <% end %>
+  </table>
 
-<% @message.each do |line| %>
-  <%= "ID:#{line[0]} #{line[1]} #{line[2]} #{line[3]} #{line[4]}" %> <br/>
-<% end %>
+
+
+
+
+
+  
+
 
