--- a/views/message.erb
+++ b/views/message.erb
@@ -20,7 +20,7 @@
           <td><%= "#{line[2]}" %></td>
           <td><%= "#{line[3]}" %></td>
           <td><%= "#{line[4]}" %></td>
-          <td><%= "#{line[5]}" %></td>
+          <td style = "background-color: <%= line[5] %>"><%= "#{line[5]}" %></td>
      </tr>
   <% end %>
   </tbody>
